# frontiercrm

./: .dockerignore  .gitignore  ACCESS.md  AUDIT_REPORT.md  FrontierCRM_Feature_Analysis_and_Gap_Detection.md  README.md  accessibility-audit.md  component-token-mapping.md  daily-summary.html  design-metrics-framework.md  design-pdf.html  design-process-templates.md  design-roadmap.md  design-system-tokens.md  dev_server.py  fly.redis.toml  fly.toml  ia-wireframes.md  mkdocs.yml  persona-briefs.md  responsive-spec.md  start-wiki.sh  state-specs.md  ui-ux-pro-max-audit.md  user-journey-maps.md  ux-maturity-assessment.md  ux-writing-guidelines.md  visual-identity-guide.md  wiki-server.py
backend/: .coverage  .env.example  Dockerfile  Dockerfile.prod  check_db.py  debug_response.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_db.sqlite3
backend/config/: __init__.py  asgi.py  beat_schedule.py  celery.py  middleware.py  redis.conf  urls.py  wsgi.py
backend/tests/: conftest.py  debug_create.py  test_activities.py  test_api_docs.py  test_auth.py  test_calendar_events.py  test_calendar_sync.py  test_calendar_sync_extras.py  test_contacts_api.py  test_core.py  test_core_models.py  test_deals.py  test_email.py  test_export.py  test_factories.py  test_files.py  test_fix_b1.py  test_fix_b2_kb2.py  test_fix_b3.py  test_fix_b4.py  test_imports.py  test_middleware.py  test_notes.py  test_onboarding.py  test_pipelines.py  test_rbac.py  test_rbac_extras.py  test_reports.py  test_search.py  test_slack.py  test_sync.py  test_tasks.py  (+2 more)
(+623 files in other folders)
