[project]
name = "frontiercrm-backend"
version = "0.1.0"
description = "FrontierCRM Backend API"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
"tests/*" = ["E501", "B017"]
"config/middleware.py" = ["SIM102"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests", "apps"]
addopts = "--reuse-db --nomigrations"

[tool.coverage.run]
source = ["apps", "config"]
omit = ["*/migrations/*", "*/tests/*", "*/venv/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 50